--- a/src/layouts/gift-page-layout/gift-page.css
+++ b/src/layouts/gift-page-layout/gift-page.css
@@ -107,6 +107,18 @@
   color: black;
 }
 
+.completed-logo {
+  width: 20px;
+  height: 20px;
+}
+
+.div-wrapper {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 @media (max-width: 550px) {
     .gift-main {
     align-items: start;
