--- a/src/layouts/gift-page-layout/gift-page.css
+++ b/src/layouts/gift-page-layout/gift-page.css
@@ -42,7 +42,7 @@
 .task-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   gap: 30px;
   padding: 5px 10px;
   align-items: center;
