--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,14 @@ body.other-page {
   background-color: #000;
   display: block;
 }
+
+html, body, #root, .App {
+  background-color: #000;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #000;
+    color: #fff;
+  }
+}
