--- a/src/layouts/task-page-layout/tasks-page.css
+++ b/src/layouts/task-page-layout/tasks-page.css
@@ -58,6 +58,10 @@
   height: 50px;
   width: 100%; /* ✅ убрано max-width */
   box-sizing: border-box;
+  padding: 5px 10px;
+  border-radius: 50px;
+  height: 80px;
+  box-shadow: 0px 5px 6px rgba(255,255,255,0.2);
 }
 
 .pfphoto {
