--- a/src/layouts/gift-page-layout/gift-page.css
+++ b/src/layouts/gift-page-layout/gift-page.css
@@ -44,14 +44,17 @@
   flex-direction: row;
   justify-content: space-between;
   gap: 30px;
-  padding: 5px 10px;
+  padding: 5px 34px; /* заменили padding-left/right */
   align-items: center;
   height: 50px;
-  width: 100%;
-  padding-left: 34px;
-  padding-right: 34px;
+  width: 100%; /* ✅ убрано max-width */
+  box-sizing: border-box;
+  padding: 5px 10px;
+  border-radius: 50px;
   height: 80px;
+  box-shadow: 0px 5px 6px rgba(255,255,255,0.2);
 }
+
 
 .pfphoto {
   height: 50px;
