--- a/src/layouts/task-page-layout/tasks-page.css
+++ b/src/layouts/task-page-layout/tasks-page.css
@@ -76,15 +76,11 @@
   flex-direction: column;
   gap: 5px;
   margin-left: 12px;
-  flex: 1;
-  min-width: 0;
 }
 
 .task-content p {
   margin: 0;
   display: block;
-  width: 150px;
-  padding-left: 5px;
 }
 
 .task-name {
@@ -125,11 +121,11 @@
 }
 
 @media (max-width: 550px) {
-  .gift-main {
+  .task-main {
     align-items: start;
   }
 
-  .gift-title {
+  .task-title {
     width: 100%;
     text-align: left;
     padding-left: 34px;
