--- a/src/layouts/friends-page-layout/friends-page.css
+++ b/src/layouts/friends-page-layout/friends-page.css
@@ -164,7 +164,7 @@
 .friends-list {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 5px;
   width: 100%;
   max-width: 308px;
   padding-top: 10px;
@@ -176,6 +176,12 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  border: 1px solid;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  border-radius: 8px;
+  background-color: #141414;
+  border-color: #363535;
 }
 
 .friend-avatar {
