--- a/src/layouts/friends-page-layout/friends-page.css
+++ b/src/layouts/friends-page-layout/friends-page.css
@@ -182,6 +182,8 @@
   border-radius: 8px;
   background-color: #141414;
   border-color: #363535;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .friend-avatar {
