--- a/src/layouts/gift-page-layout/gift-page.css
+++ b/src/layouts/gift-page-layout/gift-page.css
@@ -46,15 +46,15 @@
   flex-direction: row;
   justify-content: space-between;
   gap: 30px;
-  padding: 5px 34px; /* заменили padding-left/right */
   align-items: center;
-  height: 50px;
   width: 100%; /* ✅ убрано max-width */
   box-sizing: border-box;
-  padding: 5px 10px;
-  border-radius: 50px;
   height: 80px;
-  box-shadow: 0px 5px 6px rgba(255,255,255,0.2);
+  border: 1px solid;
+  padding: 8px 10px;
+  border-radius: 8px;
+  background-color: #141414;
+  border-color: #363535;
 }
 
 
