--- a/src/layouts/gift-page-layout/gift-page.css
+++ b/src/layouts/gift-page-layout/gift-page.css
@@ -51,12 +51,18 @@
   box-sizing: border-box;
   height: 80px;
   border: 1px solid;
-  padding: 8px 10px;
-  border-radius: 8px;
+  padding: 5px 10px;
+  border-radius: 50px;
   background-color: #141414;
   border-color: #363535;
 }
 
+.task-info {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-self: center;
+}
 
 .pfphoto {
   height: 50px;
@@ -139,7 +145,7 @@
 
   .task-container {
     width: 100%;
-    padding: 5px 20px; /* Уменьшаем боковые отступы на мобильных */
+    padding: 3px 15px; /* Уменьшаем боковые отступы на мобильных */
     gap: 15px; /* Уменьшаем промежуток между элементами */
     flex-wrap: nowrap; /* Запрещаем перенос элементов */
     overflow: hidden; /* Скрываем выходящее за пределы */
