--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
   user-select: none;
   -webkit-user-select: none;
@@ -8,7 +10,7 @@
 
 body {
   margin: 0;
-  font-family: Benzin;
+  font-family: Monserrat;
   display: flex;
   flex-direction: column;
   justify-content: start;
