--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 body {
   margin: 0;
-  font-family: Monserrat;
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: start;
