--- a/src/layouts/friends-page-layout/friends-page.css
+++ b/src/layouts/friends-page-layout/friends-page.css
@@ -107,7 +107,7 @@
   justify-content: space-evenly;
   background-color: #1A1A1A;
   border: none;
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 400;
   text-align: center;
   border: 1px solid;
@@ -122,7 +122,7 @@
   width: 100px;
   text-wrap: wrap;
   margin: 0;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 .i-bonus {
@@ -225,12 +225,12 @@
   font-weight: 600;
 }
 
-.friend-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 3px;
+.friend-info p {
+  max-width: 100px; /* ✅ или % от родителя */
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  text-align: center;
 }
 
 .friend-info p{
